[tool.poetry]
name = "dylam"
version = "1.0.0"
description = "DyLam: A Dynamic Reward Weighting Framework for Reinforcement Learning Algorithms"
authors = ["goncamateus <mgm4@cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.15"
wandb = "^0.18.5"
gym = "0.26.2"
torch = ">=2.5.1"
gymnasium = ">=0.29.1"
moviepy = "^1.0.3"
pygame = "2.6.1"
rich = "<12.0"
tenacity = "^8.2.2"
pyyaml = "^6.0.1"

ale-py = {version = "0.8.1"}
AutoROM = {extras = ["accept-rom-license"], version = "~0.4.2"}
opencv-python = {version = "4.10.0.84"}
mujoco = {version = "3.2.4"}
imageio = {version = "2.36.1"}
mkdocs-material = {version = "^8.4.3"}
markdown-include = {version = "^0.7.0"}
jax = {version = "0.4.8"}
jaxlib = {version = "0.4.7"}
flax = {version = "0.6.8"}
shimmy = {version = ">=1.1.0"}
numpy = ">=1.21.6,<2.0.0"
mo-gymnasium = "1.1.0"
box2d-py = "2.3.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"