[project]
name = "dylam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "goncamateus", email = "mgm4@cin.ufpe.br" }
]
requires-python = ">=3.10"
dependencies = [
    "gymnasium[all]==0.29.1",
    "minigrid>=3.0.0",
    "mo-gymnasium==1.1.0",
    "numpy==1.26.4",
    "rsoccer-gym",
    "torch==2.0.0",
    "wandb>=0.23.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
rsoccer-gym = { git = "https://github.com/goncamateus/rSoccer.git", rev = "dev" }

[dependency-groups]
dev = [
    "ipython>=8.37.0",
    "isort>=7.0.0",
    "ruff>=0.14.9",
]
